--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /Zirpl.AppEngine.EntityFramework.Tests/obj
 /Zirpl.AppEngine.EntityFramework.Tests/bin
 /Download
+/Zirpl.AppEngine.sln.DotSettings.user
