--- a/Zirpl.AppEngine.Tests/Zirpl.AppEngine.Tests.csproj
+++ b/Zirpl.AppEngine.Tests/Zirpl.AppEngine.Tests.csproj
@@ -39,8 +39,9 @@
     <Reference Include="FluentAssertions.Core">
       <HintPath>..\packages\FluentAssertions.3.0.107\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -65,7 +66,10 @@
     <Compile Include="Text\TextCrawling\TextCrawlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="IO\example_content.txt" />
+    <EmbeddedResource Include="IO\example_embedded.txt" />
+    <Content Include="IO\example_content.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
