--- a/.nuget/Zirpl.Common.nuspec
+++ b/.nuget/Zirpl.Common.nuspec
@@ -7,7 +7,7 @@
     <authors>Zirpl Software</authors>
     <owners>Zirpl Software</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description></description>
+    <description>Common functionality to support Zirpl libraries</description>
     <language>en-US</language>
     <copyright>Copyright 2014</copyright>
     <tags></tags>
