--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -134,7 +134,7 @@
     <Compile Include="VisualStudio\Logging\OutputPaneLogWrapper.cs" />
     <Compile Include="TextTemplating\IOutputFileManager.cs" />
     <Compile Include="TextTemplating\IOutputFileProvider.cs" />
-    <Compile Include="AppGeneration\TextTemplating\ITemplateProvider.cs" />
+    <Compile Include="TextTemplating\ITemplateProvider.cs" />
     <Compile Include="TextTemplating\ITemplateRunner.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\ObjectExtensions.cs" />
@@ -166,11 +166,13 @@
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>DT_cs.cs</LastGenOutput>
       <FormatOutput>True</FormatOutput>
+      <TransformOnBuild>True</TransformOnBuild>
     </None>
     <None Include="AppGeneration\_templates\ModelProject\DT_Enum_cs.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>DT_Enum_cs.cs</LastGenOutput>
       <FormatOutput>True</FormatOutput>
+      <TransformOnBuild>True</TransformOnBuild>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
