--- a/Zirpl.Examples.ContactManager.CodeGeneration/Zirpl.Examples.ContactManager.CodeGeneration.csproj
+++ b/Zirpl.Examples.ContactManager.CodeGeneration/Zirpl.Examples.ContactManager.CodeGeneration.csproj
@@ -30,16 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.TextTemplating.12.0, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.VisualStudio.TextTemplating.Modeling.12.0, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,25 +56,14 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Zirpl.AppEngine.VisualStudioAutomation\Zirpl.AppEngine.VisualStudioAutomation.csproj">
-      <Project>{f8855f9a-35d1-4c30-bb53-1fd89a984989}</Project>
-      <Name>Zirpl.AppEngine.VisualStudioAutomation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
-      <Project>{dd9bcb12-748c-4395-9a8e-a599a60a0caa}</Project>
-      <Name>Zirpl.AppEngine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Zirpl.Common\Zirpl.Common %28Net40%29.csproj">
-      <Project>{0402a91f-2a69-447c-bb2b-64d5af155105}</Project>
-      <Name>Zirpl.Common %28Net40%29</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>App.txt</LastGenOutput>
       <TransformOnBuild>False</TransformOnBuild>
     </None>
+    <EmbeddedResource Include="_config\_Model\Test\Foo.domain.zae">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.txt">
